--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Magic ID Reader</string>
     <string name="enter_the_number_id">Enter the number id</string>
     <string name="submit">Submit</string>
+    <string name="dob">Date of Birth:</string>
+    <string name="gender">Gender:</string>
+    <string name="citizenship">Citizenship</string>
+    <string name="newline">\n</string>
 </resources>
